creation view travels

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Transporters</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD88ZS7sX0YqZxDzQRMJagoHoxckvpn5z0&libraries=geometry,places" async defer></script>
 </head>
 
 <body>
